Fin du chapitre sur les containers de services

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -33,3 +33,7 @@ services:
             $tva: 20
 
     Cocur\Slugify\Slugify: ~
+
+    App\Taxes\Detector:
+        arguments:
+            $seuil: 999
