--- a/composer.json
+++ b/composer.json
@@ -6,13 +6,18 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "cocur/slugify": "^4.1",
+        "doctrine/doctrine-bundle": "^2.3",
+        "doctrine/doctrine-migrations-bundle": "^3.2",
+        "doctrine/orm": "^2.12",
         "sensio/framework-extra-bundle": "^6.2",
-        "symfony/console": "5.1.*",
-        "symfony/dotenv": "5.1.*",
+        "symfony/console": "6.0.*",
+        "symfony/dotenv": "6.0.*",
         "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "5.1.*",
-        "symfony/twig-bundle": "5.1.*",
-        "symfony/yaml": "5.1.*",
+        "symfony/framework-bundle": "6.0.*",
+        "symfony/maker-bundle": "^1.45",
+        "symfony/proxy-manager-bridge": "6.0.*",
+        "symfony/twig-bundle": "6.0.*",
+        "symfony/yaml": "6.0.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
     },
@@ -63,7 +68,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.1.*"
+            "require": "6.0.*"
         }
     }
 }
