--- a/.env
+++ b/.env
@@ -25,9 +25,9 @@ APP_SECRET=f6bec4af373c0f769b65c72376fe1645
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
-DATABASE_URL="mysql://sorelrouge:Humans31!@127.0.0.1:3306/symshop?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="mysql://sorelrouge:Humans31!@127.0.0.1:3306/symshop?serverVersion=mariadb-10.6.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+# DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
 
 ###< doctrine/doctrine-bundle ###
