--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.45",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/proxy-manager-bridge": "6.0.*",
         "symfony/runtime": "6.0.*",
         "symfony/string": "6.0.*",
@@ -80,6 +81,9 @@
         }
     },
     "require-dev": {
-        "fakerphp/faker": "^1.20"
+        "fakerphp/faker": "^1.20",
+        "symfony/debug-bundle": "6.0.*",
+        "symfony/stopwatch": "6.0.*",
+        "symfony/web-profiler-bundle": "6.0.*"
     }
 }
