--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "symfony/console": "6.0.*",
         "symfony/dotenv": "6.0.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/maker-bundle": "^1.45",
         "symfony/monolog-bundle": "^3.0",
